# GradeCalculator

./: .gitignore  README.md
FINAL_GradeCalculator/: CMakeLists.txt
FINAL_GradeCalculator/src/: helper.cpp  helper.h  main.cpp
OUTDATED_GradeCalculator/: GCtest.c  GradeCalculator.c  documentation.txt
